# malath-project

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/workflows/: quality.yml
docs/: database-migrations.md  storage-compatibility.md
malath/: __init__.py  config.py  errors.py  extensions.py  i18n.py  logging_config.py  models.py  security.py
malath/auth/: routes.py
malath/documents/: routes.py
malath/main/: routes.py
malath/services/: file_validation.py  storage.py
malath/static/css/: style.css
malath/templates/: base.html  dashboard.html  documents.html  edit_document.html  error.html  index.html  login.html  register.html  upload.html  verify_pin.html
migrations/: env.py
migrations/versions/: 2c9649a76cf2_initial_schema.py
static/css/: style.css
static/images/: names
templates/: base.html  dashboard.html  edit_document.html  index.html  register.html  upload.html
tests/: conftest.py  test_auth.py  test_bilingual_experience.py  test_documents.py  test_health.py  test_i18n.py  test_public.py  test_security.py  test_security_hardening.py  test_storage.py  test_storage_service.py
