[project]
name = "malath"
version = "0.1.0"
description = "Bilingual Flask platform for organizing and managing personal documents."
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3==1.42.87",
    "Flask==3.1.3",
    "Flask-Login==0.6.3",
    "Flask-SQLAlchemy==3.1.1",
    "python-dotenv==1.2.2",
    "Werkzeug==3.1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
